<resources>
    <string name="app_name">MVP-Traditional</string>

    <!-- View Action -->
    <string name="network_error">网络不给力</string>
    <string name="double_click_exit">再按一次退出程序</string>
    <string name="no_more_content">暂无更多内容</string>
    <string name="loading">加载中</string>

    <!-- Menu Action -->
    <string name="action_search">搜索</string>
    <string name="share_app_text">个人开源项目! </string>
    <string name="source_code_url">https://github.com/shenqiwen/MVP-Traditional</string>
    <string name="share_to">分享</string>

    <!-- Bottom Navigation Title -->
    <string name="bottom_navigation_title1">1</string>
    <string name="bottom_navigation_title2">2</string>
    <string name="bottom_navigation_title3">3</string>
    <string name="bottom_navigation_title4">4</string>

    <!-- DrawerLayout Navigation-->
    <string name="navigation_drawer_open">打开侧栏</string>
    <string name="navigation_drawer_close">关闭侧栏</string>
    <string name="nav_switch_night_mode">切换主题</string>
    <string name="nav_setting">设置</string>
    <string name="nav_share">分享</string>

    <!-- Title -->
    <string name="title_channel_edit">频道编辑</string>

    <!-- Item Drag -->
    <string name="tip_drag">长按编辑,拖拽排序</string>
    <string name="my_cahnnel">我的频道</string>
    <string name="other_channel">隐藏频道</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>

    <!-- AlertDialog -->
    <string name="button_allow">允许</string>
    <string name="button_deny">拒绝</string>
    <string name="button_enter">确定</string>
    <string name="button_cancel">取消</string>

    <!-- Permission -->
    <string name="permission_write_rationale">使用此功能需要打开存储权限</string>
    <string name="permission_write_denied">你拒绝了权限，该功能不可用</string>
    <string name="permission_write_never_ask">已设置不再询问权限申请</string>

</resources>
