<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_navigation_menu1"
        android:enabled="true"
        android:icon="@drawable/ic_newspaper_white_24dp"
        android:title="@string/bottom_navigation_title1"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_navigation_menu2"
        android:enabled="true"
        android:icon="@drawable/ic_gallery_white_24dp"
        android:title="@string/bottom_navigation_title2"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_navigation_menu3"
        android:enabled="true"
        android:icon="@drawable/ic_youtube_white_24dp"
        android:title="@string/bottom_navigation_title3"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_navigation_menu4"
        android:enabled="true"
        android:icon="@drawable/ic_library_books_white_24dp"
        android:title="@string/bottom_navigation_title4"
        app:showAsAction="ifRoom"/>
</menu>