<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lin_switch_night_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_night_gray_24dp" />

            <TextView
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_switch_night_mode"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_setting_gray_24dp" />

            <TextView
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_setting"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_share_grey_24dp" />

            <TextView
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_share"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>